# amuse

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  key_github  key_github.pub
autoproflib/: LICENSE  README.md  pyproject.toml
autoproflib/AutoProfLib/: AutoProfLib.py  __init__.py
autoproflib/AutoProfLib/example_AutoMKMToCFD/: Auto_MKM_toOF.py  Barriers.csv  PreOpenFoam_readable_reactions.txt  PreSurface.sur  README.md  periodictable.csv
autoproflib/AutoProfLib/example_AutoProfLib/: Execute_AutoProfLib.ipynb  Human_readable_reactions.txt  Stoich_mat.csv  g.mkm  g_ref.mkm  rm.mkm
autoproflib/AutoProfLib/example_UsePreProcessor/: AutoProfLib.py  README.md  UsePreProcessor.py
autoproflib/tests/Co_0001_iPrOH/CH3CHOHCH3/: Geom_pbc.xyz
autoproflib/tests/Co_0001_iPrOH/Slab/: AutoProfLib_DEF.py  Execute_AutoProfLib_Comented.ipynb  Human_readable_reactions.txt
autoproflib/tests/Co_0001_iPrOH/TS_CH/: GeomTS_CH.xyz  Geom_pbc.xyz  Geomenergy_sumary0.0062.txt  Geomenergy_sumary['Substitute', 0.0124].txt
autoproflib/tests/Co_0001_iPrOH/TS_CH_OH/: GeomTS_CH_OH  Geomenergy_sumary0.0062.txt  Geomenergy_sumary0.0093.txt
autoproflib/tests/Co_0001_iPrOH/TS_OH/: Geom_pbc.xyz  Geomenergy_sumary0.0062.txt  Geomenergy_sumary0.0093.txt  Geomenergy_sumaryNone.txt
autoproflib/tests/Co_0001_iPrOH/TS_OH_CH/: Geom_pbc.xyz  Geomenergy_sumary0.0093.txt  Geomenergy_sumaryNone.txt
autoproflib/tests/Co_11-20_iPrOH/TS_CH/: Geomenergy_sumary['Substitute', 0.0124].txt
autoproflib/tests/Co_11-20_iPrOH/TS_CH_OH/: GeomTS_CH_OH.xyz  Geomenergy_sumary0.0124.txt  (+1 more)
(+519 files in other folders)
